# phina

./: .dockerignore  .travis.yml  CMakeLists.txt  Dockerfile
cmake/: FindBeast.cmake
src/: main.cpp
utils/: build  build-env-file  docker-build  docker-build-env-file  docker-run  run  settings  travis-docker-push
